# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py  users.db
dokumentaatio/: Arkkitehtuuri.md  changelog.md  käyttöohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti.py  maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py  maksukortti.py
laskarit/viikko3/: .tehtävä1:Monopoli.md.swp  tehtävä1:monopoli.md  tehtävä2:HSL.md
src/: README.md  database.py  game.py  interface.py  pyproject.toml  tasks.py  users.db
src/tests/: test_IsGameStarted.py
