[tool.poetry]
name = "sudoku"
version = "0.1"
description = "Sudoku-peli"
authors = ["Emil Visuri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "*"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
coverage = "^7.4.4"
pytest = "^8.1.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
